Introducción Shared Preferences
Con el fín de no remodelar el código luego, hago ahora el sistema de SharedPreferences.

>Los datos guardados se gestionarán mediante Hashtables
>La carga de la partida se realizará en el submenú (clase "EscenaJuego")

--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -6,4 +6,6 @@
     <string name="btn_scores">Records</string>
     <string name="btn_help">Ayuda</string>
     <string name="msg_exit">¿De verdad quieres salir?</string>
+    <string name="btn_newgame">Juego Nuevo</string>
+    <string name="btn_continue">Continuar</string>
 </resources>
