--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -6,4 +6,6 @@
     <string name="btn_scores">Scores</string>
     <string name="btn_help">Help</string>
     <string name="msg_exit">Do you really wanna exit?</string>
+    <string name="btn_newgame">New Game</string>
+    <string name="btn_continue">Continue</string>
 </resources>
