--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -8,4 +8,11 @@
     <string name="msg_exit">¿De verdad quieres salir?</string>
     <string name="btn_newgame">Juego Nuevo</string>
     <string name="btn_continue">Continuar</string>
+    <string name="opt_music">"Música: "</string>
+    <string name="opt_soundeffects">"Efectos de sonido: "</string>
+    <string name="opt_vibration">"Vibración: "</string>
+    <string name="ptd_lifenumb">"Número de vidas: "</string>
+    <string name="ptd_time">"Tiempo: "</string>
+    <string name="ptd_spatk">Ataque especial %:</string>
+    <string name="ptd_sceenid">"Id escena: "</string>
 </resources>
