Implementaciones menores no definitivas
>Creación de la pantalla de GameOver, junto con un botón para probarla.
>Habilitada funcion "nueva partida".
>El gameplay será implementado en la siguiente actualización, probablemente.
De momento se puede mover al monigote por la pantalla, sin ningún tipo de animación.
>Comienza el desarrollo de la clase Siegfried (el protagonista).

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">The Dragon\'s Lair</string>
-    <string name="btn_play">Play</string>
+    <string name="btn_play">Enter the dungeon</string>
     <string name="btn_options">Options</string>
     <string name="btn_scores">Scores</string>
     <string name="btn_help">Help</string>
@@ -15,4 +15,5 @@
     <string name="ptd_time">"Time: "</string>
     <string name="ptd_spatk">Special Atack %:</string>
     <string name="ptd_sceenid">"Sceen id: "</string>
+    <string name="msg_gameover">Game Over</string>
 </resources>
