--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">The Dragon\'s Lair</string>
-    <string name="btn_play">Jugar</string>
+    <string name="app_name">La guarida del Dragon</string>
+    <string name="btn_play">Entar en la mazmorra</string>
     <string name="btn_options">Opciones</string>
     <string name="btn_scores">Records</string>
     <string name="btn_help">Ayuda</string>
@@ -15,4 +15,5 @@
     <string name="ptd_time">"Tiempo: "</string>
     <string name="ptd_spatk">Ataque especial %:</string>
     <string name="ptd_sceenid">"Id escena: "</string>
+    <string name="msg_gameover">Has perdido</string>
 </resources>
